Removendo relacionamento do cliente com o pedido ao excluir o cliente.