@@ -1,8 +1,6 @@
 package br.com.fiap.soat8.grp14.techchallenge.domain.usecases;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -23,20 +21,19 @@ public class ClienteServiceImpl implements ClienteServicePort {
     @Override
     public List<ClienteDTO> listarTodos()  {
         List<Cliente> clientes = clienteRepositoryPort.listarTodos();
-        List<ClienteDTO> clienteDTOs = clientes.stream().map(Cliente::toClienteDTO).collect(Collectors.toList());
-        return clienteDTOs;
+        return clientes.stream().map(Cliente::toClienteDTO).toList();
     }
 
     @Override
     public ClienteDTO buscarCliente(String cpf) {
-        Optional<Cliente> cliente = clienteRepositoryPort.buscarCliente(cpf);
-        return cliente.map(Cliente::toClienteDTO).orElse(null);
+        Cliente cliente = clienteRepositoryPort.buscarCliente(cpf);
+        return cliente.toClienteDTO();
     }
     
     @Override
     public ClienteDTO buscarCliente(Long id) {
-    	Optional<Cliente> cliente = clienteRepositoryPort.buscarCliente(id);
-        return cliente.map(Cliente::toClienteDTO).orElse(null);
+    	Cliente cliente = clienteRepositoryPort.buscarCliente(id);
+        return cliente.toClienteDTO();
     }
 
 	@Override
@@ -47,13 +44,9 @@ public class ClienteServiceImpl implements ClienteServicePort {
 	}
 
 	@Override
-    public boolean excluirCliente(Long id) {
-        Optional<Cliente> clienteOpt = clienteRepositoryPort.buscarCliente(id);
-        if (clienteOpt.isPresent()) {
-            clienteRepositoryPort.excluirCliente(clienteOpt.get());
-            return true;
-        }
-        return false;
+    public void excluirCliente(Long id) {
+        Cliente cliente = clienteRepositoryPort.buscarCliente(id);
+        clienteRepositoryPort.excluirCliente(cliente);
     }
 
 }
